# rcs

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/rcs/: atomic.hpp  hex.hpp  lc.hpp  log.hpp  uri.hpp
include/rcs/co/: awaitable.hpp
include/rcs/execution/: executor.hpp  inline_executor.hpp  invocable_archetype.hpp
include/rcs/io/: service.hpp  token.hpp
include/rcs/io/uring/: cq_off.hpp  cqe.hpp  cqr.hpp  enter.hpp  flags.hpp  op.hpp  params.hpp  setup.hpp  sq_off.hpp  sqe.hpp  sqr.hpp
include/rcs/ip/: address.hpp  endpoint.hpp  socket.hpp  tcp.hpp  udp.hpp  v4.hpp  v6.hpp
include/rcs/log/: backtrace.hpp  report.hpp  severity.hpp
include/rcs/system/: exception.hpp  handle.hpp
src/: CMakeLists.txt  hex.cpp  uri.cpp
src/io/uring/: cqr.cpp  enter.cpp  setup.cpp  sqr.cpp
src/ip/: address.cpp  endpoint.cpp
src/ip/v4/: address.cpp  endpoint.cpp
src/ip/v6/: address.cpp  endpoint.cpp
src/log/: report.cpp
src/system/: handle.cpp
test/: CMakeLists.txt  hex.cpp  test.cpp  uri.cpp
test/ip/v4/: address.cpp  endpoint.cpp
test/ip/v6/: address.cpp  endpoint.cpp
